# fanpath-metlife

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  DESIGN.md  Dockerfile  LICENSE  Makefile  PROGRESS.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  errors.py  main.py  rate_limit.py  routes.py  schemas.py
app/agents/: __init__.py  gemini_factory.py  guide.py  intent.py  schemas.py
app/auth/: __init__.py  firebase.py  staff.py
app/firestore/: __init__.py  fans.py  venue_state.py
app/graph/: __init__.py  edge_id.py  loader.py
app/models/: __init__.py  enums.py
app/pathfinding/: __init__.py  engine.py
app/rendering/: __init__.py  svg_renderer.py
data/: metlife_graph.draft.json  metlife_graph.json
docs/: BUILD-LOG.md
scripts/: _apply_graph_corrections.py  check_function_length.py  draft_graph.py  gemini_preflight.py  verify_docs.py  verify_graph.py
static/: fan.html  fan.js  firebase-config.js  staff.html  staff.js  style.css
tests/: test_main.py
tests/contract/: test_guide_agent.py  test_intent_agent.py
tests/fixtures/: small_graph.json
tests/integration/: conftest.py  test_coverage_topup.py  test_error_contract.py  test_navigate_endpoint.py  test_staff_closures.py
tests/unit/: test_auth.py  test_bootstrap_helpers.py  test_edge_id.py  test_enums.py  test_errors.py  test_fan_js_alt_text.py  test_fans.py  test_gemini_factory.py  test_pathfinding.py  test_routes_helpers.py  test_staff_auth.py  test_svg_renderer.py  test_venue_state.py
