[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fanpath-metlife"
version = "0.1.0"
description = "Smart Indoor Navigation for MetLife Stadium (FIFA World Cup 2026)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Apoorv Gupta" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "firebase-admin>=6.5",
    "google-cloud-firestore>=2.19",
    "google-genai>=0.3",
    "slowapi>=0.1.9",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.7",
    "pip-audit>=2.7",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", "build", "dist", "static"]

[tool.ruff.lint]
select = ["E", "F", "W", "C901", "PLR0912", "PLR0915", "I", "B"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=95"

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
