[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fanpath-metlife"
version = "0.1.0"
description = "Smart Indoor Navigation for MetLife Stadium (FIFA World Cup 2026)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Apoorv Gupta" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "firebase-admin>=6.5",
    "google-cloud-firestore>=2.19",
    "google-genai>=0.3",
    "slowapi>=0.1.9",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.7",
    "pip-audit>=2.7",
    "interrogate>=1.7",
    "mypy>=1.11",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", "build", "dist", "static"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "B",
    "C901", "PLR0912", "PLR0915",
    "N",
    "UP",
    "C4",
    "SIM",
    "RUF",
    "BLE001",
    "D200", "D201", "D202", "D205", "D209", "D400", "D401",
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"scripts/*" = ["D"]
"app/models/enums.py" = ["UP042"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.interrogate]
fail-under = 100
exclude = ["tests", "build", "dist", ".venv"]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-private = true

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
files = ["app"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=100"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
